# internal/domain/entity/user.go
@@ -1,6 +1,7 @@
 package entity
 
 import (
+	"encoding/base64"
 	"github.com/guregu/null"
 	uuid "github.com/satori/go.uuid"
 	"golang.org/x/crypto/bcrypt"
@@ -12,9 +13,12 @@ type User struct {
 	gorm.Model
 	UUID     string      `gorm:"uniqueIndex;not null;type:varchar(36)"`
 	Username string      `gorm:"uniqueIndex;not null;type:varchar(36)"` // 用户名
-	Password null.String `gorm:"type:varchar(256)"`                     // 密码
-	Nickname null.String `gorm:"type:varchar(36)"`                      // 昵称
-	IsAdmin  null.Bool   `gorm:"default: false"`                        // true：是管理员
+	Phone    string      `gorm:"uniqueIndex;type:varchar(11)"`
+	Password null.String `gorm:"type:varchar(256)"` // 密码
+	Nickname null.String `gorm:"type:varchar(36)"`  // 昵称
+	IsAdmin  null.Bool   `gorm:"default: false"`    // true：是管理员
+	RealName null.String `gorm:"type:varchar(128)"` // 真实姓名
+	Avatar   null.String // 头像
 }
 
 func NewUser(username string) *User {
@@ -62,6 +66,25 @@ func (u *User) SetIsAdmin(val *bool) *User {
 	return u
 }
 
+func (u *User) SetPhone(p string) *User {
+	u.Phone = p
+	return u
+}
+
+func (u *User) SetRealName(n string) *User {
+	if len(n) > 0 {
+		u.RealName.SetValid(n)
+	}
+	return u
+}
+
+func (u *User) SetAvatar(n []byte) *User {
+	if len(n) > 0 {
+		u.Avatar.SetValid(base64.StdEncoding.EncodeToString(n))
+	}
+	return u
+}
+
 func (u *User) QueryCond() (res map[string]interface{}) {
 	var (
 		data = make(map[string]interface{})
@@ -81,6 +104,11 @@ func (u *User) QueryCond() (res map[string]interface{}) {
 		data["nickname"] = u.Nickname.String
 	case u.IsAdmin.Ptr() != nil:
 		data["is_admin"] = u.IsAdmin.Bool
+	case u.RealName.Ptr() != nil:
+		data["real_name"] = u.RealName.String
+	case len(u.Phone) > 0:
+		data["phone"] = u.Phone
+		return data
 	}
 	return data
 }
